--- a/src/login-page/login_style.css
+++ b/src/login-page/login_style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #dfd7d7;
+    background-color: #a69cad;
     /* font-family: "Asap", sans-serif;
     font-family: 'Exo', sans-serif; */
     font-family: 'Exo 2', sans-serif;
@@ -7,7 +7,7 @@ body {
 
 .login {
     overflow: hidden;
-    background-color: #7b73f2;
+    background-color: #ad77cf;
     padding: 40px 30px 30px 30px;
     border-radius: 10px;
     position: absolute;
@@ -41,7 +41,7 @@ body {
 .login::before {
     left: 40%;
     bottom: -130%;
-    background-color: rgba(87, 89, 223, 0.15);
+    background-color: rgba(71, 73, 162, 0.637);
     -webkit-animation: wawes 6s infinite linear;
     -moz-animation: wawes 6s infinite linear;
     animation: wawes 6s infinite linear;
@@ -145,4 +145,8 @@ a {
 #div-logo {
     text-align: center;
     padding-bottom: 20px;
+}
+
+input {
+    font-family: 'Exo 2', sans-serif;
 }
