--- a/src/login-page/login_style.css
+++ b/src/login-page/login_style.css
@@ -12,7 +12,7 @@ body {
     background-image:
         radial-gradient(at 47% 33%, hsl(299.64, 85%, 39%) 0, transparent 59%),
         radial-gradient(at 82% 65%, hsl(295.42, 71%, 67%) 0, transparent 55%);
-
+    user-select: none;
 }
 
 .login {
@@ -43,6 +43,7 @@ body {
     background-color: rgba(255, 255, 255, 0);
     border-radius: 12px;
     border: 1px solid rgba(209, 213, 219, 0.3);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 /*.login::before,
