--- a/src/login-page/first-login_style.css
+++ b/src/login-page/first-login_style.css
@@ -100,7 +100,7 @@ body {
     border: 0;
     padding: 10px 0;
     margin-top: 10px;
-    margin-left: -5px;
+    /*margin-left: -5px;*/
     border-radius: 5px;
     background-color: #f0f0f0;
     -webkit-transition: background-color 300ms;
